--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -1,1 +1,42 @@
 
+name: Generate AI Newsletter (Draft PR)
+
+on:
+  schedule:
+    - cron: "0 7 * * 2"   # Tuesdays 07:00 UTC; adjust as needed
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pull-requests: write
+
+jobs:
+  build-draft:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install feedparser requests
+
+      - name: Generate newsletter markdown
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          python scripts/generate.py
+
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commit-message: "chore(newsletter): add draft issue"
+          title: "AI Newsletter draft – $(date -u +'%Y-%m-%d') [ai-agent]"
+          body: "Auto-generated draft. Please review sources, claims and CTAs."
+          branch: "newsletter/draft-$(date -u +'%Y-%m-%d')"
+          labels: "newsletter,ai,needs-review"
