--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests
+          pip install feedparser requests PyYAML
 
       - name: Generate newsletter markdown
         env:
