--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install feedparser requests PyYAML
+          pip install python-dateutil
 
       - name: Generate newsletter markdown
         env:
