--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -21,11 +21,18 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Set up pip cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests PyYAML
-          pip install python-dateutil
+          pip install -r requirements.txt
 
       - name: Generate newsletter markdown
         env:
