Cursor triggered updates

--- a/sources.yml
+++ b/sources.yml
@@ -1,9 +1,30 @@
 feeds:
+  # Trade Finance & Fintech
   - name: Finextra
     url: https://www.finextra.com/rss/headlines.aspx
   - name: Trade Finance Global
     url: https://www.tradefinanceglobal.com/feed/
+  
+  # AI & Technology
   - name: The Batch (deeplearning.ai)
     url: https://www.deeplearning.ai/the-batch/feed/
+  - name: MIT Technology Review AI
+    url: https://www.technologyreview.com/feed/
+  - name: OpenAI Blog
+    url: https://openai.com/blog/rss.xml
+  - name: Anthropic News
+    url: https://www.anthropic.com/news/rss.xml
+  
+  # Business & Strategy
   - name: Benedict Evans
     url: https://www.ben-evans.com/feed
+  - name: a16z Future
+    url: https://future.com/feed/
+  - name: Harvard Business Review AI
+    url: https://feeds.hbr.org/harvardbusiness/
+  
+  # Product & Development
+  - name: First Round Review
+    url: https://review.firstround.com/rss.xml
+  - name: Product Hunt Daily
+    url: https://www.producthunt.com/feed/daily
