--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,51 +13,61 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Find latest newsletter file
         id: find
+        shell: bash
         run: |
-          LATEST=$(ls -1 newsletter/*.md | tail -n 1)
-          echo "file=$LATEST" >> $GITHUB_OUTPUT
+          set -euo pipefail
+          FILE="$(ls -1t newsletter/*.md | head -n 1)"
+          echo "file=$FILE" >> "$GITHUB_OUTPUT"
+
+      - name: Install jq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
 
       - name: Post preview to Slack
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          SLACK_CHANNEL: "#ai-newsletter"
+          SLACK_CHANNEL: "#ai-newsletter"   # <-- change to your channel
+          FILE: ${{ steps.find.outputs.file }}
+        shell: bash
         run: |
-          TEXT=$(sed '1,5!d' "${{ steps.find.outputs.file }}")   # first ~5 lines
-          curl -X POST https://slack.com/api/chat.postMessage \
+          set -euo pipefail
+          PREVIEW="$(head -n 20 "$FILE")"
+          JSON="$(jq -n --arg ch "$SLACK_CHANNEL" --arg txt "$PREVIEW" \
+            '{channel:$ch, text:("New issue published:\n" + $txt), unfurl_links:false}')"
+          curl -s -X POST https://slack.com/api/chat.postMessage \
             -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
             -H "Content-type: application/json" \
-            --data "{\"channel\":\"$SLACK_CHANNEL\",\"text\":\"New issue published:\n$(echo "$TEXT" | sed 's/\"/\\"/g')\n\nFull issue archived in Confluence.\",\"unfurl_links\":false}"
-      # Optional: schedule the message instead of immediate post:
-      # chat.scheduleMessage is also available if you want a timed send.
-      # https://api.slack.com/methods/chat.scheduleMessage
+            --data "$JSON" | jq .
 
       - name: Update Confluence archive
         env:
-          CF_BASE: ${{ secrets.CONFLUENCE_BASE_URL }}
-          CF_USER: ${{ secrets.CONFLUENCE_USER }}
-          CF_TOKEN: ${{ secrets.CONFLUENCE_API_TOKEN }}
-          CF_PAGE_ID: ${{ secrets.CONFLUENCE_PAGE_ID }}
+          CF_BASE:  ${{ secrets.CONFLUENCE_BASE_URL }}      # e.g. https://yourcompany.atlassian.net
+          CF_USER:  ${{ secrets.CONFLUENCE_USER }}           # Atlassian email
+          CF_TOKEN: ${{ secrets.CONFLUENCE_API_TOKEN }}      # API token
+          CF_PAGE_ID: ${{ secrets.CONFLUENCE_PAGE_ID }}      # page id for the archive
+          FILE: ${{ steps.find.outputs.file }}
+        shell: bash
         run: |
-          BODY=$(python - <<'PY'
-import sys, json
-path = "${{ steps.find.outputs.file }}"
-with open(path) as f:
-  md = f.read()
-# Minimal convert: wrap Markdown in a code block or use your renderer.
-content = "<pre>" + md.replace("&","&amp;").replace("<","&lt;").replace(">","&gt;") + "</pre>"
-print(json.dumps({"body": content}))
-PY
-)
-          # Fetch current page version
-          CURR=$(curl -s -u "$CF_USER:$CF_TOKEN" "$CF_BASE/wiki/api/v2/pages/${CF_PAGE_ID}")
-          VER=$(echo "$CURR" | jq -r '.version.number') || VER=1
-          NEW=$((VER+1))
-          TITLE=$(date -u +'%Y-%m-%d')": MitiMind"
-          curl -s -u "$CF_USER:$CF_TOKEN" -X PUT "$CF_BASE/wiki/api/v2/pages/${CF_PAGE_ID}" \
-            -H "Content-Type: application/json" \
-            --data "{\"version\":{\"number\":$NEW},\"title\":\"$TITLE\",\"body\":{\"storage\":{\"value\":$(echo $BODY | jq -aRs .),\"representation\":\"storage\"}}}"
+          set -euo pipefail
+          # HTML-escape markdown content and wrap in <pre> for simplicity
+          HTML_CONTENT="$(printf '<pre>%s</pre>' "$(sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g' "$FILE")")"
 
+          # Get current page version
+          CURR="$(curl -s -u "$CF_USER:$CF_TOKEN" "$CF_BASE/wiki/api/v2/pages/$CF_PAGE_ID")"
+          VER="$(echo "$CURR" | jq -r '.version.number // 1')"
+          NEW=$((VER+1))
+
+          TITLE="$(basename "$FILE" .md): MitiMind"
+
+          DATA="$(jq -n --arg title "$TITLE" --arg body "$HTML_CONTENT" --argjson ver "$NEW" \
+            '{version:{number:$ver}, title:$title, body:{storage:{value:$body, representation:"storage"}}}')"
+
+          curl -s -u "$CF_USER:$CF_TOKEN" -X PUT "$CF_BASE/wiki/api/v2/pages/$CF_PAGE_ID" \
+            -H "Content-Type: application/json" \
+            --data "$DATA" | jq -r '.id // "ok"'
