Update Slack channel in publish workflow
Changed the SLACK_CHANNEL environment variable from #ai-newsletter to #ai-publish-test in the GitHub Actions publish workflow for testing or deployment purposes.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Post full message to Slack
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          SLACK_CHANNEL: "#ai-newsletter"   # <-- change if needed
+          SLACK_CHANNEL: "#ai-publish-test"   # <-- change if needed
           FILE_SLACK: ${{ steps.find.outputs.file_slack }}
         shell: bash
         run: |
