Remove temperature and update posting schedule
gpt 5 defaults to temp 1 so removed it. Changed the auto generate schedule to Tuesdays.

--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -2,7 +2,7 @@ name: Generate AI Newsletter (Draft PR)
 
 on:
   schedule:
-    - cron: "0 7 * * 2"         # Tuesdays 07:00 UTC
+    - cron: "0 6 * * 3"         # Wednesdays 07:00 CET (06:00 UTC)
   workflow_dispatch:
 
 permissions:
