--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -10,6 +10,14 @@ on:
         required: false
         default: 'false'
         type: boolean
+      target_environment:
+        description: 'Target environment for testing (only affects direct commits)'
+        required: false
+        default: 'test'
+        type: choice
+        options:
+        - test
+        - production
 
 permissions:
   contents: write
@@ -56,7 +64,9 @@ jobs:
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "Add newsletter $(date +%Y-%m-%d)"
+            # Include environment in commit message for publish workflow
+            ENV_TAG="${{ inputs.target_environment || 'production' }}"
+            git commit -m "Add newsletter $(date +%Y-%m-%d) [env:$ENV_TAG]"
             git push
           fi
 
